# coursera-scraper

./: .gitignore  CLAUDE.md  README.md  browser_manager.py  cli.py  coursera_transcript_scraper.py  debug_Introduction_Video____Duration__2_minutes_20260622_191950.html  debug_Meet_Your_Instructor_-_Prof__Kunal_Korgaonkar_Vide_20260622_191524.html  debug_lecture.py  export.py  export.sh  pyproject.toml  requirements.txt  session_manager.py  transcript_extractor.py
coursera_scraper.egg-info/: PKG-INFO
tests/: test_export.py
